--- a/css/styles.css
+++ b/css/styles.css
@@ -11681,26 +11681,26 @@ body {
 .contact-section .social a:active {
   color: #fff;
 }
-.login {
+.admin-section {
     width: 400px;
     background-color: #ffffff;
     box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
     margin: 100px auto;
 }
-.login h1 {
+.admin-section h1 {
     text-align: center;
     color: #5b6574;
     font-size: 24px;
     padding: 20px 0 20px 0;
     border-bottom: 1px solid #dee0e4;
 }
-.login form {
+.admin-section form {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     padding-top: 20px;
 }
-.login form label {
+.admin-section form label {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -11709,14 +11709,14 @@ body {
     background-color: #3274d6;
     color: #ffffff;
 }
-.login form input[type="password"], .login form input[type="text"] {
+.admin-section form input[type="password"], .admin-section form input[type="text"] {
     width: 310px;
     height: 50px;
     border: 1px solid #dee0e4;
     margin-bottom: 20px;
     padding: 0 15px;
 }
-.login form input[type="submit"] {
+.admin-section form input[type="submit"] {
     width: 100%;
     padding: 15px;
   margin-top: 20px;
@@ -11727,7 +11727,7 @@ body {
     color: #ffffff;
     transition: background-color 0.2s;
 }
-.login form input[type="submit"]:hover {
+.admin-section form input[type="submit"]:hover {
   background-color: #2868c7;
     transition: background-color 0.2s;
 }
