--- a/css/styles.css
+++ b/css/styles.css
@@ -329,7 +329,7 @@ td,
 th {
   border-color: inherit;
   border-style: solid;
-  border-width: 0;
+  border-width: 1px;
 }
 
 label {
@@ -11731,6 +11731,80 @@ body {
   background-color: #2868c7;
     transition: background-color 0.2s;
 }
+.user-section {
+    width: 1450px;
+    background-color: #000;
+    box-shadow: 0 0 9px 0 rgba(0, 0, 0, 0.3);
+    margin: 100px auto;
+}
+.user-section h1 {
+    text-align: center;
+    color: #ffffff;
+    font-size: 24px;
+    padding: 20px 0 20px 0;
+    border-bottom: 1px solid #dee0e4;
+}
+.user-section form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 20px;
+    align-items: center;
+    width: 35%;
+    flex-direction: column;
+    margin: auto;
+}
+.user-section form div {
+  width: 100%;
+}
+.user-section form div input,.user-section form div select{
+    width: 100%;
+    height: 54px;
+    margin: 10px;
+    border-radius: 5px;
+    border: 1px solid black;
+}
+/*.user-section form button{
+  width: 250px;
+  padding: 10px;
+  border-radius: 2px;
+  background-color: rgba(0, 0, 0, 1.0);
+  color: #fff;
+}
+.user-section form button:hover{
+  background-color: rgba(0, 0, 0, 0.7);
+}*/
+/*.user-section form label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    background-color: #3274d6;
+    color: #ffffff;
+}
+.user-section form input[type="password"], .admin-section form input[type="text"] {
+    width: 310px;
+    height: 50px;
+    border: 1px solid #dee0e4;
+    margin-bottom: 20px;
+    padding: 0 15px;
+}
+.user-section form input[type="submit"] {
+    width: 25%;
+    padding: 15px;
+  margin-top: 20px;
+    background-color: #3274d6;
+    border: 0;
+    cursor: pointer;
+    font-weight: bold;
+    color: #ffffff;
+    transition: background-color 0.2s;
+}
+.user-section form input[type="submit"]:hover {
+  background-color: #2868c7;
+    transition: background-color 0.2s;
+}*/
 .footer {
   padding: 5rem 0;
 }
