--- a/css/styles.css
+++ b/css/styles.css
@@ -11767,6 +11767,64 @@ body {
 .user-section p {
     text-align: center;
 }
+.rate {
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px
+}
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
+}
+
+.rating>input {
+    display: none;
+}
+
+.rating>label {
+    position: relative;
+    width: fit-content;
+    font-size: 30px;
+    font-weight: 300;
+    color: #FFD600;
+    cursor: pointer;
+    
+}
+
+.rating>label::before {
+    content: "\2605";
+    position: absolute;
+    opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+    opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+    opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+    opacity: 0.4
+}
+
+.buttons {
+    top: 36px;
+    position: relative
+}
+
+.rating-submit {
+    border-radius: 15px;
+    color: black;
+    height: 60px
+}
+
+.rating-submit:hover {
+    color: black
+}
 /*.user-section form button{
   width: 250px;
   padding: 10px;
